--- a/src/data/_message.yaml
+++ b/src/data/_message.yaml
@@ -35,6 +35,8 @@ home_sponsors_en: Sponsors
 #########################################
 # schedule
 #########################################
+ipynb: IP[y]:Nb
+ipynb_en: IP[y]:Nb
 slide: 幻灯
 slide_en: slides
 slide1: 幻灯2
