appended en intro for Knownsec

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -187,7 +187,7 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/knownsec.jpg?imageView2/2/w/180
   link: http://www.knownsec.com/
   intro: "知道创宇由数位国际顶尖的安全专家创办，并拥有近百位国内一线安全人才作为核心安全研究团队，长期为政府及企业提供国际先进的网络安全解决方案。知道创宇擅长全新形势下的网络攻防一体技术、产品研发。利用在云计算及大数据处理方面的行业领先能力，为客户提供具备国际一流安全技术标准的可视化解决方案，提升客户网络安全监测、预警及防御能力。公司技术实力受到国家公安部、国务院中央政府采购网、工信部、CNNVD、央行、香港赛马会、微软、浙江卫视等知名客户的强烈认可。"
-
+  intro_en: "Beijing Knownsec Information Technology Co., Ltd. was established by a group of high-profile international security experts. It has over a hundred frontier security talents nationwide as the core security research team to provide long-term internationally advanced network security solutions for the government and enterprises. Knownsec's specialties include network attack and defense integrated technologies and product R&D under new situations. It provides visualization solutions that meet the world-class security technology standards and enhances the security monitoring, alarm and defense abilities of customer networks with its industry-leading capabilities in cloud computing and big data processing. The company's technical strength is strongly recognized by the State Ministry of Public Security, the Central Government Procurement Center, the Ministry of Industry and Information Technology (MIIT), China National Vulnerability Database of Information Security (CNNVD), the Central Bank, the Hong Kong Jockey Club, Microsoft, Zhejiang Satellite TV and other well-known clients. "
 
 
 #########################################
